--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -72,6 +72,8 @@
 	"available!": "magamit!",
 	"Back": "Balik",
 	"Bad Response": "",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "I-enable ang kasaysayan sa chat",
 	"Enable Community Sharing": "",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "I-enable ang bag-ong mga rehistro",
 	"Enable Web Search": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
@@ -261,6 +265,7 @@
 	"File": "",
 	"File Mode": "File mode",
 	"File not found.": "Wala makit-an ang file.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
 	"Minimum Score": "",
 	"Mirostat": "Mirostat",
