--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -71,6 +71,8 @@
 	"available!": "verfügbar!",
 	"Back": "Zurück",
 	"Bad Response": "Schlechte Antwort",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banner",
 	"Base Model (From)": "Basismodell (von)",
 	"Batch Size (num_batch)": "",
@@ -209,7 +211,9 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding-Modell auf \"{{embedding_model}}\" gesetzt",
 	"Enable Chat History": "Chat-Verlauf aktivieren",
 	"Enable Community Sharing": "Community-Freigabe aktivieren",
-	"Enable New Sign Ups": "Neue Anmeldungen aktivieren",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
+	"Enable New Sign Ups": "Registrierung erlauben",
 	"Enable Web Search": "Websuche aktivieren",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Stellen Sie sicher, dass Ihre CSV-Datei 4 Spalten in dieser Reihenfolge enthält: Name, E-Mail, Passwort, Rolle.",
 	"Enter {{role}} message here": "Gib die {{role}} Nachricht hier ein",
@@ -260,11 +264,12 @@
 	"File": "",
 	"File Mode": "File Modus",
 	"File not found.": "Datei nicht gefunden.",
-	"Filter is now globally disabled": "",
-	"Filter is now globally enabled": "",
-	"Filters": "",
-	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Fingerprint spoofing erkannt: Initialen können nicht als Avatar verwendet werden. Es wird auf das Standardprofilbild zurückgegriffen.",
-	"Fluidly stream large external response chunks": "Große externe Antwortblöcke flüssig streamen",
+	"Filter": "",
+	"Filter is now globally disabled": "Filter ist jetzt global deaktiviert",
+	"Filter is now globally enabled": "Filter ist jetzt global aktiviert",
+	"Filters": "Filter",
+	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Fingerabdruck-Spoofing erkannt: Initialen können nicht als Avatar verwendet werden. Standard-Avatar wird verwendet.",
+	"Fluidly stream large external response chunks": "Nahtlose Übertragung großer externer Antwortabschnitte",
 	"Focus chat input": "Chat-Eingabe fokussieren",
 	"Followed instructions perfectly": "Anweisungen perfekt befolgt",
 	"Form": "",
@@ -341,14 +346,15 @@
 	"Max Tokens (num_predict)": "Max. Token (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Es können maximal 3 Modelle gleichzeitig heruntergeladen werden. Bitte versuche es später erneut.",
 	"May": "Mai",
-	"Memories accessible by LLMs will be shown here.": "Memories, die von LLMs zugänglich sind, werden hier angezeigt.",
-	"Memory": "Memory",
-	"Memory added successfully": "",
-	"Memory cleared successfully": "",
-	"Memory deleted successfully": "",
-	"Memory updated successfully": "",
-	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Nachdem Sie Ihren Link erstellt haben, werden Ihre Nachrichten nicht geteilt. Benutzer mit dem Link können den geteilten Chat sehen.",
-	"Minimum Score": "Mindestscore",
+	"Memories accessible by LLMs will be shown here.": "Erinnerungen, die für Modelle zugänglich sind, werden hier angezeigt.",
+	"Memory": "Erinnerungen",
+	"Memory added successfully": "Erinnerung erfolgreich hinzugefügt",
+	"Memory cleared successfully": "Erinnerung erfolgreich gelöscht",
+	"Memory deleted successfully": "Erinnerung erfolgreich gelöscht",
+	"Memory updated successfully": "Erinnerung erfolgreich aktualisiert",
+	"Message Filter Settings": "",
+	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Nachrichten, die Sie nach der Erstellung Ihres Links senden, werden nicht geteilt. Nutzer mit der URL können die freigegebene Unterhaltung einsehen.",
+	"Minimum Score": "Mindestpunktzahl",
 	"Mirostat": "Mirostat",
 	"Mirostat Eta": "Mirostat Eta",
 	"Mirostat Tau": "Mirostat Tau",
