--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -71,6 +71,8 @@
 	"available!": "available! So excite!",
 	"Back": "Back",
 	"Bad Response": "",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -209,6 +211,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "Activate Chat Story",
 	"Enable Community Sharing": "",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Enable New Bark Ups",
 	"Enable Web Search": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
@@ -260,6 +264,7 @@
 	"File": "",
 	"File Mode": "Bark Mode",
 	"File not found.": "Bark not found.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -346,6 +351,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "",
 	"Minimum Score": "",
 	"Mirostat": "Mirostat",
