--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -72,6 +72,8 @@
 	"available!": "¡disponible!",
 	"Back": "Volver",
 	"Bad Response": "Respuesta incorrecta",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Modelo base (desde)",
 	"Batch Size (num_batch)": "Tamaño del Batch (num_batch)",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Modelo de Embedding configurado a \"{{embedding_model}}\"",
 	"Enable Chat History": "Activa el Historial de Chat",
 	"Enable Community Sharing": "Habilitar el uso compartido de la comunidad",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Habilitar Nuevos Registros",
 	"Enable Web Search": "Habilitar la búsqueda web",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Asegúrese de que su archivo CSV incluya 4 columnas en este orden: Nombre, Correo Electrónico, Contraseña, Rol.",
@@ -261,6 +265,7 @@
 	"File": "Archivo",
 	"File Mode": "Modo de archivo",
 	"File not found.": "Archivo no encontrado.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "Filtros",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "Memoria liberada correctamente",
 	"Memory deleted successfully": "Memoria borrada correctamente",
 	"Memory updated successfully": "Memoria actualizada correctamente",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Los mensajes que envíe después de crear su enlace no se compartirán. Los usuarios con el enlace podrán ver el chat compartido.",
 	"Minimum Score": "Puntuación mínima",
 	"Mirostat": "Mirostat",
