--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -71,6 +71,8 @@
 	"available!": "saatavilla!",
 	"Back": "Takaisin",
 	"Bad Response": "Epäkelpo vastaus",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Bannerit",
 	"Base Model (From)": "Perusmalli (alkaen)",
 	"Batch Size (num_batch)": "",
@@ -209,6 +211,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "\"{{embedding_model}}\" valittu upotusmalliksi",
 	"Enable Chat History": "Ota keskusteluhistoria käyttöön",
 	"Enable Community Sharing": "Ota yhteisön jakaminen käyttöön",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Salli uudet rekisteröitymiset",
 	"Enable Web Search": "Ota verkkohaku käyttöön",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Varmista, että CSV-tiedostossasi on 4 saraketta seuraavassa järjestyksessä: Nimi, Sähköposti, Salasana, Rooli.",
@@ -260,6 +264,7 @@
 	"File": "",
 	"File Mode": "Tiedostotila",
 	"File not found.": "Tiedostoa ei löytynyt.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -346,6 +351,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Linkin luomisen jälkeen lähettämiäsi viestejä ei jaeta. Käyttäjät, joilla on URL-osoite, voivat tarkastella jaettua keskustelua.",
 	"Minimum Score": "Vähimmäispisteet",
 	"Mirostat": "Mirostat",
