--- a/src/lib/i18n/locales/fr-CA/translation.json
+++ b/src/lib/i18n/locales/fr-CA/translation.json
@@ -72,7 +72,9 @@
 	"available!": "disponible !",
 	"Back": "Retour",
 	"Bad Response": "Mauvaise réponse",
-	"Banners": "Bannières",
+	"Bad words File": "",
+	"Bad words Template": "",
+	"Banners": "Banniers",
 	"Base Model (From)": "Modèle de base (à partir de)",
 	"Batch Size (num_batch)": "",
 	"before": "avant",
@@ -206,10 +208,12 @@
 	"Email": "Email",
 	"Embedding Batch Size": "",
 	"Embedding Model": "Modèle d'embedding",
-	"Embedding Model Engine": "Moteur du modèle d'embedding",
-	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'embedding défini sur \"{{embedding_model}}\"",
-	"Enable Chat History": "Activer l'historique des discussions",
-	"Enable Community Sharing": "Permettre le partage communautaire",
+	"Embedding Model Engine": "Moteur de modèle d'encodage",
+	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'encodage défini sur « {{embedding_model}} »",
+	"Enable Chat History": "Activer l'historique de conversation",
+	"Enable Community Sharing": "Activer le partage communautaire",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Activer les nouvelles inscriptions",
 	"Enable Web Search": "Activer la recherche sur le Web",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Assurez-vous que votre fichier CSV inclut 4 colonnes dans cet ordre : Nom, Email, Mot de passe, Rôle.",
@@ -261,15 +265,16 @@
 	"File": "",
 	"File Mode": "Mode fichier",
 	"File not found.": "Fichier introuvable.",
-	"Filter is now globally disabled": "",
-	"Filter is now globally enabled": "",
-	"Filters": "",
-	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Détection de falsification de empreinte digitale\u00a0: impossible d'utiliser les initiales comme avatar. Par défaut, l'image de profil par défaut est utilisée.",
-	"Fluidly stream large external response chunks": "Diffusez de manière fluide de gros morceaux de réponses externes",
-	"Focus chat input": "Se concentrer sur l'entrée de la discussion",
-	"Followed instructions perfectly": "Suivi des instructions parfaitement",
-	"Form": "",
-	"Format your variables using square brackets like this:": "Formatez vos variables en utilisant des crochets comme ceci :",
+	"Filter": "",
+	"Filter is now globally disabled": "Le filtre est maintenant désactivé globalement",
+	"Filter is now globally enabled": "Le filtre est désormais activé globalement",
+	"Filters": "Filtres",
+	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Spoofing détecté : impossible d'utiliser les initiales comme avatar. Retour à l'image de profil par défaut.",
+	"Fluidly stream large external response chunks": "Diffuser de manière fluide de larges portions de réponses externes",
+	"Focus chat input": "Se concentrer sur le chat en entrée",
+	"Followed instructions perfectly": "A parfaitement suivi les instructions",
+	"Form": "Formulaire",
+	"Format your variables using square brackets like this:": "Formatez vos variables en utilisant des crochets comme suit :",
 	"Frequency Penalty": "Pénalité de fréquence",
 	"Function created successfully": "",
 	"Function deleted successfully": "",
@@ -343,12 +348,13 @@
 	"May": "Mai",
 	"Memories accessible by LLMs will be shown here.": "Les mémoires accessibles par les LLM seront affichées ici.",
 	"Memory": "Mémoire",
-	"Memory added successfully": "",
-	"Memory cleared successfully": "",
-	"Memory deleted successfully": "",
-	"Memory updated successfully": "",
-	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Les messages que vous envoyez après la création de votre lien ne seront pas partagés. Les utilisateurs avec l'URL pourront voir le chat partagé.",
-	"Minimum Score": "Score minimum",
+	"Memory added successfully": "Mémoire ajoutée avec succès",
+	"Memory cleared successfully": "La mémoire a été effacée avec succès",
+	"Memory deleted successfully": "La mémoire a été supprimée avec succès",
+	"Memory updated successfully": "La mémoire a été mise à jour avec succès",
+	"Message Filter Settings": "",
+	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Les messages que vous envoyez après avoir créé votre lien ne seront pas partagés. Les utilisateurs disposant de l'URL pourront voir le chat partagé.",
+	"Minimum Score": "Score minimal",
 	"Mirostat": "Mirostat",
 	"Mirostat Eta": "Mirostat Eta",
 	"Mirostat Tau": "Mirostat Tau",
