--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -70,11 +70,13 @@
 	"AUTOMATIC1111 Base URL": "URL de base AUTOMATIC1111",
 	"AUTOMATIC1111 Base URL is required.": "L'URL de base AUTOMATIC1111 est requise.",
 	"available!": "disponible !",
-	"Back": "Retour",
-	"Bad Response": "Mauvaise Réponse",
-	"Banners": "Bannières",
-	"Base Model (From)": "Modèle de Base (De)",
-	"Batch Size (num_batch)": "",
+	"Back": "Retour en arrière",
+	"Bad Response": "Mauvaise réponse",
+	"Bad words File": "",
+	"Bad words Template": "",
+	"Banners": "Banniers",
+	"Base Model (From)": "Modèle de base (à partir de)",
+	"Batch Size (num_batch)": "Taille du lot (num_batch)",
 	"before": "avant",
 	"Being lazy": "Est paresseux",
 	"Brave Search API Key": "Clé API Brave Search",
@@ -198,18 +200,20 @@
 	"Download canceled": "Téléchargement annulé",
 	"Download Database": "Télécharger la base de données",
 	"Drop any files here to add to the conversation": "Déposez des fichiers ici pour les ajouter à la conversation",
-	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "par ex. '30s', '10m'. Les unités de temps valides sont 's', 'm', 'h'.",
-	"Edit": "Éditer",
-	"Edit Doc": "Éditer le document",
-	"Edit Memory": "",
-	"Edit User": "Éditer l'utilisateur",
-	"Email": "Email",
-	"Embedding Batch Size": "",
-	"Embedding Model": "Modèle pour l'Embedding",
-	"Embedding Model Engine": "Moteur du Modèle d'Embedding",
-	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'embedding défini sur \"{{embedding_model}}\"",
-	"Enable Chat History": "Activer l'historique du chat",
-	"Enable Community Sharing": "Activer le partage de communauté",
+	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "par ex. '30s', '10 min'. Les unités de temps valides sont 's', 'm', 'h'.",
+	"Edit": "Modifier",
+	"Edit Doc": "Modifier le document",
+	"Edit Memory": "Modifier la mémoire",
+	"Edit User": "Modifier l'utilisateur",
+	"Email": "E-mail",
+	"Embedding Batch Size": "Taille du lot d'encodage",
+	"Embedding Model": "Modèle d'embedding",
+	"Embedding Model Engine": "Moteur de modèle d'encodage",
+	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'encodage défini sur « {{embedding_model}} »",
+	"Enable Chat History": "Activer l'historique de conversation",
+	"Enable Community Sharing": "Activer le partage communautaire",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Activer les nouvelles inscriptions",
 	"Enable Web Search": "Activer la recherche sur le Web",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Vérifiez que le fichier CSV contienne 4 colonnes dans cet ordre : Name (Nom), Email, Password (Mot de passe), Role (Rôle).",
@@ -258,18 +262,19 @@
 	"Failed to update settings": "",
 	"February": "Février",
 	"Feel free to add specific details": "N'hésitez pas à ajouter des détails spécifiques",
-	"File": "",
-	"File Mode": "Mode Fichier",
-	"File not found.": "Fichier non trouvé.",
-	"Filter is now globally disabled": "",
-	"Filter is now globally enabled": "",
-	"Filters": "",
-	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Usurpation d'empreinte digitale détectée : Impossible d'utiliser les initiales comme avatar. L'image de profil par défaut sera utilisée.",
-	"Fluidly stream large external response chunks": "Diffusez de manière fluide de gros morceaux de réponses externes",
-	"Focus chat input": "Concentrer sur l'entrée du chat",
-	"Followed instructions perfectly": "A suivi les instructions parfaitement",
-	"Form": "",
-	"Format your variables using square brackets like this:": "Formatez vos variables en utilisant des crochets comme ceci :",
+	"File": "Fichier",
+	"File Mode": "Mode fichier",
+	"File not found.": "Fichier introuvable.",
+	"Filter": "",
+	"Filter is now globally disabled": "Le filtre est maintenant désactivé globalement",
+	"Filter is now globally enabled": "Le filtre est désormais activé globalement",
+	"Filters": "Filtres",
+	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Spoofing détecté : impossible d'utiliser les initiales comme avatar. Retour à l'image de profil par défaut.",
+	"Fluidly stream large external response chunks": "Diffuser de manière fluide de larges portions de réponses externes",
+	"Focus chat input": "Se concentrer sur le chat en entrée",
+	"Followed instructions perfectly": "A parfaitement suivi les instructions",
+	"Form": "Formulaire",
+	"Format your variables using square brackets like this:": "Formatez vos variables en utilisant des crochets comme suit :",
 	"Frequency Penalty": "Pénalité de fréquence",
 	"Function created successfully": "",
 	"Function deleted successfully": "",
@@ -343,12 +348,13 @@
 	"May": "Mai",
 	"Memories accessible by LLMs will be shown here.": "Les Mémoires des LLMs apparaîtront ici.",
 	"Memory": "Mémoire",
-	"Memory added successfully": "",
-	"Memory cleared successfully": "",
-	"Memory deleted successfully": "",
-	"Memory updated successfully": "",
-	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Les messages que vous envoyéz après la création du lien ne seront pas partagés. Les utilisateurs disposant de l'URL pourront voir le chat partagé.",
-	"Minimum Score": "Score Minimum",
+	"Memory added successfully": "Mémoire ajoutée avec succès",
+	"Memory cleared successfully": "La mémoire a été effacée avec succès",
+	"Memory deleted successfully": "La mémoire a été supprimée avec succès",
+	"Memory updated successfully": "La mémoire a été mise à jour avec succès",
+	"Message Filter Settings": "",
+	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Les messages que vous envoyez après avoir créé votre lien ne seront pas partagés. Les utilisateurs disposant de l'URL pourront voir le chat partagé.",
+	"Minimum Score": "Score minimal",
 	"Mirostat": "Mirostat",
 	"Mirostat Eta": "Mirostat Eta",
 	"Mirostat Tau": "Mirostat Tau",
