--- a/src/lib/i18n/locales/pa-IN/translation.json
+++ b/src/lib/i18n/locales/pa-IN/translation.json
@@ -72,6 +72,8 @@
 	"available!": "ਉਪਲਬਧ ਹੈ!",
 	"Back": "ਵਾਪਸ",
 	"Bad Response": "ਖਰਾਬ ਜਵਾਬ",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "ਬੈਨਰ",
 	"Base Model (From)": "ਬੇਸ ਮਾਡਲ (ਤੋਂ)",
 	"Batch Size (num_batch)": "",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "ਐਮਬੈੱਡਿੰਗ ਮਾਡਲ ਨੂੰ \"{{embedding_model}}\" 'ਤੇ ਸੈੱਟ ਕੀਤਾ ਗਿਆ",
 	"Enable Chat History": "ਗੱਲਬਾਤ ਦਾ ਇਤਿਹਾਸ ਯੋਗ ਕਰੋ",
 	"Enable Community Sharing": "ਕਮਿਊਨਿਟੀ ਸ਼ੇਅਰਿੰਗ ਨੂੰ ਸਮਰੱਥ ਕਰੋ",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "ਨਵੇਂ ਸਾਈਨ ਅਪ ਯੋਗ ਕਰੋ",
 	"Enable Web Search": "ਵੈੱਬ ਖੋਜ ਨੂੰ ਸਮਰੱਥ ਕਰੋ",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "ਸੁਨਿਸ਼ਚਿਤ ਕਰੋ ਕਿ ਤੁਹਾਡੀ CSV ਫਾਈਲ ਵਿੱਚ ਇਸ ਕ੍ਰਮ ਵਿੱਚ 4 ਕਾਲਮ ਹਨ: ਨਾਮ, ਈਮੇਲ, ਪਾਸਵਰਡ, ਭੂਮਿਕਾ।",
@@ -261,6 +265,7 @@
 	"File": "",
 	"File Mode": "ਫਾਈਲ ਮੋਡ",
 	"File not found.": "ਫਾਈਲ ਨਹੀਂ ਮਿਲੀ।",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "ਤੁਹਾਡਾ ਲਿੰਕ ਬਣਾਉਣ ਤੋਂ ਬਾਅਦ ਤੁਹਾਡੇ ਵੱਲੋਂ ਭੇਜੇ ਗਏ ਸੁਨੇਹੇ ਸਾਂਝੇ ਨਹੀਂ ਕੀਤੇ ਜਾਣਗੇ। URL ਵਾਲੇ ਉਪਭੋਗਤਾ ਸਾਂਝੀ ਚੈਟ ਨੂੰ ਵੇਖ ਸਕਣਗੇ।",
 	"Minimum Score": "ਘੱਟੋ-ਘੱਟ ਸਕੋਰ",
 	"Mirostat": "ਮਿਰੋਸਟੈਟ",
