--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -72,6 +72,8 @@
 	"available!": "disponível!",
 	"Back": "Voltar",
 	"Bad Response": "Resposta ruim",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Modelo Base (De)",
 	"Batch Size (num_batch)": "",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Modelo de Embedding definido como \"{{embedding_model}}\"",
 	"Enable Chat History": "Ativar Histórico de Bate-papo",
 	"Enable Community Sharing": "Habilitar o compartilhamento da comunidade",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Ativar Novas Inscrições",
 	"Enable Web Search": "Habilitar a Pesquisa na Web",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Garanta que seu arquivo CSV inclua 4 colunas nesta ordem: Nome, E-mail, Senha, Função.",
@@ -261,6 +265,7 @@
 	"File": "",
 	"File Mode": "Modo de Arquivo",
 	"File not found.": "Arquivo não encontrado.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Mensagens que você enviar após criar seu link não serão compartilhadas. Os usuários com o URL poderão visualizar o bate-papo compartilhado.",
 	"Minimum Score": "Pontuação Mínima",
 	"Mirostat": "Mirostat",
