--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -72,6 +72,8 @@
 	"available!": "доступный!",
 	"Back": "Назад",
 	"Bad Response": "Недопустимый ответ",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Баннеры",
 	"Base Model (From)": "Базовая модель (от)",
 	"Batch Size (num_batch)": "",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Эмбеддинг-модель установлена в \"{{embedding_model}}\"",
 	"Enable Chat History": "Включить историю чата",
 	"Enable Community Sharing": "Включить общий доступ к сообществу",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Разрешить новые регистрации",
 	"Enable Web Search": "Включить поиск в Интернете",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Убедитесь, что ваш CSV-файл включает в себя 4 столбца в следующем порядке: Имя, Электронная почта, Пароль, Роль.",
@@ -261,6 +265,7 @@
 	"File": "",
 	"File Mode": "Режим файла",
 	"File not found.": "Файл не найден.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Сообщения, которые вы отправляете после создания ссылки, не будут распространяться. Пользователи с URL смогут просматривать общий чат.",
 	"Minimum Score": "Минимальный балл",
 	"Mirostat": "Mirostat",
