--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -72,6 +72,8 @@
 	"available!": "доступно!",
 	"Back": "Назад",
 	"Bad Response": "Неправильна відповідь",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Прапори",
 	"Base Model (From)": "Базова модель (від)",
 	"Batch Size (num_batch)": "Розмір партії (num_batch)",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Встановлена модель вбудовування \"{{embedding_model}}\"",
 	"Enable Chat History": "Увімкнути історію чату",
 	"Enable Community Sharing": "Увімкнути спільний доступ",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Дозволити нові реєстрації",
 	"Enable Web Search": "Увімкнути веб-пошук",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Переконайтеся, що ваш CSV-файл містить 4 колонки в такому порядку: Ім'я, Email, Пароль, Роль.",
@@ -261,6 +265,7 @@
 	"File": "Файл",
 	"File Mode": "Файловий режим",
 	"File not found.": "Файл не знайдено.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "Фільтри",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "Пам'ять успішно очищено",
 	"Memory deleted successfully": "Пам'ять успішно видалено",
 	"Memory updated successfully": "Пам'ять успішно оновлено",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Повідомлення, які ви надішлете після створення посилання, не будуть доступні для інших. Користувачі, які мають URL, зможуть переглядати спільний чат.",
 	"Minimum Score": "Мінімальний бал",
 	"Mirostat": "Mirostat",
