--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -72,6 +72,8 @@
 	"available!": "可用！",
 	"Back": "返回",
 	"Bad Response": "錯誤回應",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "橫幅",
 	"Base Model (From)": "基礎模型（來自）",
 	"Batch Size (num_batch)": "批次大小（num_batch）",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "嵌入模型已設定為 \"{{embedding_model}}\"",
 	"Enable Chat History": "啟用聊天紀錄",
 	"Enable Community Sharing": "啟用社群分享",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "允許註冊新帳號",
 	"Enable Web Search": "啟用網頁搜尋",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "請確保您的 CSV 檔案包含這四個欄位，並按照此順序：名稱、電子郵件、密碼、角色。",
@@ -261,6 +265,7 @@
 	"File": "檔案",
 	"File Mode": "檔案模式",
 	"File not found.": "找不到檔案。",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "篩選器",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "建立連結後傳送的訊息將不會被共享。具有 URL 的使用者將會能夠檢視共享的聊天。",
 	"Minimum Score": "最低分數",
 	"Mirostat": "Mirostat",
