--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -72,6 +72,8 @@
 	"available!": "disponibile!",
 	"Back": "Indietro",
 	"Bad Response": "Risposta non valida",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Banner",
 	"Base Model (From)": "Modello base (da)",
 	"Batch Size (num_batch)": "",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Modello di embedding impostato su \"{{embedding_model}}\"",
 	"Enable Chat History": "Abilita cronologia chat",
 	"Enable Community Sharing": "Abilita la condivisione della community",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Abilita nuove iscrizioni",
 	"Enable Web Search": "Abilita ricerca Web",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Assicurati che il tuo file CSV includa 4 colonne in questo ordine: Nome, Email, Password, Ruolo.",
@@ -261,6 +265,7 @@
 	"File": "",
 	"File Mode": "Modalità file",
 	"File not found.": "File non trovato.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "I messaggi inviati dopo la creazione del link non verranno condivisi. Gli utenti con l'URL saranno in grado di visualizzare la chat condivisa.",
 	"Minimum Score": "Punteggio minimo",
 	"Mirostat": "Mirostat",
