--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -72,6 +72,8 @@
 	"available!": "사용 가능!",
 	"Back": "뒤로가기",
 	"Bad Response": "잘못된 응답",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "배너",
 	"Base Model (From)": "기본 모델(시작)",
 	"Batch Size (num_batch)": "배치 크기 (num_batch)",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "임베딩 모델을 \"{{embedding_model}}\"로 설정함",
 	"Enable Chat History": "채팅 기록 활성화",
 	"Enable Community Sharing": "커뮤니티 공유 활성화",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "새 회원가입 활성화",
 	"Enable Web Search": "웹 검색 활성화",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSV 파일에 이름, 이메일, 비밀번호, 역할 4개의 컬럼이 순서대로 포함되어 있는지 확인하세요.",
@@ -261,6 +265,7 @@
 	"File": "",
 	"File Mode": "파일 모드",
 	"File not found.": "파일을 찾을 수 없습니다.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "링크 생성 후에 보낸 메시지는 공유되지 않습니다. URL이 있는 사용자는 공유된 채팅을 볼 수 있습니다.",
 	"Minimum Score": "최소 점수",
 	"Mirostat": "Mirostat",
