--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -72,6 +72,8 @@
 	"available!": "доступно!",
 	"Back": "Назад",
 	"Bad Response": "Лош одговор",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Барјаке",
 	"Base Model (From)": "Основни модел (од)",
 	"Batch Size (num_batch)": "",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Модел уградње подешен на \"{{embedding_model}}\"",
 	"Enable Chat History": "Омогући историју ћаскања",
 	"Enable Community Sharing": "Омогући дељење заједнице",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Омогући нове пријаве",
 	"Enable Web Search": "Омогући Wеб претрагу",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Уверите се да ваша CSV датотека укључује 4 колоне у овом редоследу: Име, Е-пошта, Лозинка, Улога.",
@@ -261,6 +265,7 @@
 	"File": "",
 	"File Mode": "Режим датотеке",
 	"File not found.": "Датотека није пронађена.",
+	"Filter": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
 	"Filters": "",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "",
 	"Memory deleted successfully": "",
 	"Memory updated successfully": "",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Поруке које пошаљете након стварања ваше везе неће бити подељене. Корисници са URL-ом ће моћи да виде дељено ћаскање.",
 	"Minimum Score": "Најмањи резултат",
 	"Mirostat": "Миростат",
