--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -72,6 +72,8 @@
 	"available!": "mevcut!",
 	"Back": "Geri",
 	"Bad Response": "Kötü Yanıt",
+	"Bad words File": "",
+	"Bad words Template": "",
 	"Banners": "Afişler",
 	"Base Model (From)": "Temel Model ('den)",
 	"Batch Size (num_batch)": "Yığın Boyutu (num_batch)",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Gömme modeli \"{{embedding_model}}\" olarak ayarlandı",
 	"Enable Chat History": "Sohbet Geçmişini Etkinleştir",
 	"Enable Community Sharing": "Topluluk Paylaşımını Etkinleştir",
+	"Enable message bad Words replacement": "",
+	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Yeni Kayıtları Etkinleştir",
 	"Enable Web Search": "Web Aramasını Etkinleştir",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSV dosyanızın şu sırayla 4 sütun içerdiğinden emin olun: İsim, E-posta, Şifre, Rol.",
@@ -261,6 +265,7 @@
 	"File": "Dosya",
 	"File Mode": "Dosya Modu",
 	"File not found.": "Dosya bulunamadı.",
+	"Filter": "",
 	"Filter is now globally disabled": "Filtre artık global olarak devre dışı",
 	"Filter is now globally enabled": "Filtre artık global olarak devrede",
 	"Filters": "Filtreler",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "Bellek başarıyle temizlendi",
 	"Memory deleted successfully": "Bellek başarıyla silindi",
 	"Memory updated successfully": "Bellek başarıyla güncellendi",
+	"Message Filter Settings": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Bağlantınızı oluşturduktan sonra gönderdiğiniz mesajlar paylaşılmayacaktır. URL'ye sahip kullanıcılar paylaşılan sohbeti görüntüleyebilecektir.",
 	"Minimum Score": "Minimum Skor",
 	"Mirostat": "Mirostat",
