--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -72,6 +72,8 @@
 	"available!": "版本可用！",
 	"Back": "返回",
 	"Bad Response": "点踩此回答",
+	"Bad words File": "不良词汇文件",
+	"Bad words Template": "不良词汇例子",
 	"Banners": "公告横幅",
 	"Base Model (From)": "基础模型 (来自)",
 	"Batch Size (num_batch)": "批大小 (num_batch)",
@@ -210,6 +212,8 @@
 	"Embedding model set to \"{{embedding_model}}\"": "语义向量模型设置为 \"{{embedding_model}}\"",
 	"Enable Chat History": "启用对话历史记录",
 	"Enable Community Sharing": "启用分享至社区",
+	"Enable message bad Words replacement": "启用消息中不良词汇替换",
+	"Enable Message Filter": "启用消息过滤器",
 	"Enable New Sign Ups": "允许新用户注册",
 	"Enable Web Search": "启用网络搜索",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "确保您的 CSV 文件按以下顺序包含 4 列： 姓名、电子邮箱、密码、角色。",
@@ -261,6 +265,7 @@
 	"File": "文件",
 	"File Mode": "文件模式",
 	"File not found.": "文件未找到。",
+	"Filter": "消息过滤",
 	"Filter is now globally disabled": "过滤器已全局禁用",
 	"Filter is now globally enabled": "过滤器已全局启用",
 	"Filters": "过滤器",
@@ -347,6 +352,7 @@
 	"Memory cleared successfully": "记忆清除成功",
 	"Memory deleted successfully": "记忆删除成功",
 	"Memory updated successfully": "记忆更新成功",
+	"Message Filter Settings": "消息过滤器设置",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "创建链接后发送的消息不会被共享。具有 URL 的用户将能够查看共享对话。",
 	"Minimum Score": "最低分",
 	"Mirostat": "Mirostat",
